# rasen-orchestrator

./: .coverage  .gitignore  BUILD.md  CLAUDE.MD  DAEMON.md  DESCRIPTION.md  LICENSE  Makefile  README.md  build.py  claude-progress.txt  coverage.json  init.sh  pyproject.toml  rasen.spec  rasen.yml.example
.claude/: settings.local.json
.rasen/: implementation_plan.json
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: anthropic-long-running-agents-deep-dive.md  architecture-auto-claude.md  architecture-claude-flow.md  architecture-ralph-claude-code.md  architecture-ralph-orchestrator.md  background-mode.md  claude-code-tools-research.md  claude-sdk-vs-cli-proof.md  configuration.md  fix-tasks.md  long-running-agent-loop-research.md  long-running-agent-workflow-proposal.md  plan.md
integration-tests/.rasen/: prompt_initializer.md  status.json  task.txt
prompts/: qa.md  reviewer.md
scripts/: pre-commit-orchestration.sh
src/rasen/: __init__.py  claude_runner.py  cli.py  config.py  daemon.py  events.py  exceptions.py  git.py  logging.py  loop.py  models.py  prompts.py  qa.py  review.py  validation.py
src/rasen/prompts/: coder.md  initializer.md  qa.md  reviewer.md
src/rasen/stores/: __init__.py  _atomic.py  memory_store.py  metrics_store.py  plan_store.py  recovery_store.py  status_store.py
tests/: PROGRESS.md  README.md  __init__.py  conftest.py  test_config.py  test_events.py  test_exceptions.py  test_git.py  test_loop_attempt_recording.py  test_models.py  test_prompts.py  test_qa.py  test_review.py  test_validation.py
tests/integration/: README.md  __init__.py  test_binary_fibonacci.py  test_config_init.py  test_orchestration_flow.py  test_prompt_bundling.py  test_review_loop.py
tests/stores/: test_atomic.py  test_plan_store.py  test_recovery_store.py
