[project]
name = "rasen-orchestrator"
version = "0.1.0"
description = "Production-ready orchestrator for long-running autonomous coding tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # No anthropic SDK needed - we use Claude Code CLI via subprocess
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
rasen = "rasen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rasen"]

# Include prompt templates in package
[tool.hatch.build.targets.wheel.force-include]
"src/rasen/prompts" = "rasen/prompts"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["Auto-Claude", "ralph-orchestrator", "_bmad"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLR0912",  # Too many branches (main loop expected to be complex)
    "PLR0915",  # Too many statements (main loop expected to be complex)
    "SIM103",   # Return negated condition (clearer with explicit returns)
    "TC001",    # Move app imports to type-checking (breaks runtime usage)
    "TC003",    # Move stdlib into type-checking block (overly aggressive)
]

[tool.ruff.lint.isort]
known-first-party = ["rasen"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
files = ["src/rasen"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "integration: Integration tests (may be slow, require external dependencies)",
    "requires_api: Tests that require Claude API access",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/rasen"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
